--- a/VoicePassword/app.wxss
+++ b/VoicePassword/app.wxss
@@ -9,3 +9,21 @@
   box-sizing: border-box;
   width: 100%;
 } 
+.userinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.userinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+  border: 5rpx solid #ddd;
+}
+
+.userinfo-nickname {
+  color: #aaa;
+  font-size: 28rpx;
+}
