--- a/VoicePassword/pages/index/index.wxss
+++ b/VoicePassword/pages/index/index.wxss
@@ -1,21 +1,6 @@
 /**index.wxss**/
 
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
 
 .voice {
   padding-top: 50rpx;
@@ -25,6 +10,8 @@
 .button-record {
   margin-top: 10rpx;
   width: 80%;
+  font-size: 24rpx;
+  margin-bottom: 10rpx;
 }
 
 .button-play {
@@ -56,12 +43,12 @@
   height: 100rpx;
 }
 
-.top-bar{
+.top-bar {
   width: 100%;
   height: 50rpx;
   display: flex;
   margin: 0 auto;
-  font-size: 14px;
+  font-size: 24rpx;
   font-family: '微软雅黑' '宋体';
   flex-direction: row;
   align-content: center;
@@ -73,19 +60,94 @@
   color: white;
 }
 
-.top-bar .navbar-item{
+.top-bar .navbar-item {
   width: 14%;
-  height: 40rpx; 
+  height: 40rpx;
+  text-align: center;
 }
 
-#navbar-item1{
+#navbar-item1 {
   margin-left: 14%;
   margin-right: 14%;
 }
-
-.navbar-item-active .line{
+.navbar-item-active{
+  font-size: 26rpx;
+}
+.navbar-item-active .line {
   width: 100%;
   height: 5rpx;
   background-color: white;
   margin-top: 10rpx;
+}
+
+swiper {
+  height: 1000rpx;
+  padding-top: 50rpx;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
+  height: auto;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  box-shadow: 0rpx 0rpx 20rpx 10rpx rgba(0, 0, 0, 0.2);
+}
+
+.word-set {
+  display: flex;
+  flex-direction: row;
+  width: 85%;
+  height: 50rpx;
+  margin: 20rpx auto;
+  font-size: 28rpx;
+}
+
+
+.word-set text {
+  width: 30%;
+  line-height: 50rpx;
+}
+
+.word-set input {
+  width: 70%;
+  border-color: #878787;
+  border-style: solid;
+  border-top-width: 0px;
+  border-right-width: 0px;
+  border-bottom-width: 1px;
+  border-left-width: 0px;
+}
+.question-set input {
+  width: 85%;
+  margin: 20rpx auto;
+  font-size: 24rpx;
+  border-color: #878787;
+  border-style: solid;
+  border-top-width: 0px;
+  border-right-width: 0px;
+  border-bottom-width: 1px;
+  border-left-width: 0px;
+}
+
+.guide-tip,.cost-tip{
+  font-size: 20rpx;
+  color: grey;
+  text-align: center;
+  margin-bottom: 10rpx;
+}
+.guide-tip{
+  text-align: left;
+  margin-left: 8%;
+}
+
+.btn-create{
+  width: 70%;
+  border-radius: 50rpx;
+  margin-top: 30rpx;
+  margin-bottom: 30rpx;
+  font-size: 28rpx;
+  padding: 10rpx;
 }
