--- a/VoicePassword/pages/record/record.wxml
+++ b/VoicePassword/pages/record/record.wxml
@@ -1,52 +1,52 @@
 <view class='container'>
-  <view class='top-bar'>
-
-    <view class="navbar-item {{ item.type }}" id="navbar-item{{index}}" wx:for="{{ navbarArray }}" wx:key="type" catchtap="onTapNavbar">
-      <view class="navbar-item-wrap">
-        <view>{{ item.text }}</view>
-        <view class='line'></view>
+  <view class='topbar-bg'>
+    <view class='top-bar'>
+      <view class="navbar-item {{ item.type }}" id="navbar-item{{index}}" wx:for="{{ navbarArray }}" wx:key="type" catchtap="onTapNavbar">
+        <view class="navbar-item-wrap">
+          <view>{{ item.text }}</view>
+          <view class='line'></view>
+        </view>
       </view>
+
     </view>
-   
   </view>
   <swiper bindchange='changeBar' current='{{currentChannelIndex}}' circular="{{false}}">
-    <!-- <block> -->
-      <swiper-item>
-        <view bindtap="bindViewTap" class="userinfo">
-          <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-           <text class="userinfo-nickname">{{userInfo.nickName}} 发出的</text> 
+    <swiper-item>
+      <view class="userinfo">
+        <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+        <text class="userinfo-nickname">{{userInfo.nickName}} 发出的</text>
+      </view>
+      <view class='main'>
+        <!-- 1 -->
+        <view class='main-item'>
+          <view class='item-top'>金额（元）</view>
+          <view class='item-bottom'>{{sendMoney}}</view>
         </view>
-        <view class='main'>
-<!-- 1 --> 
-          <view class='main-item' >
-            <view class='item-top'>金额（元）</view>
-            <view class='item-bottom'>{{sendMoney}}</view>
-          </view>
-          <view  class='main-item'>
-            <view class='item-top'>数量（个）</view>
-            <view class='item-bottom'>{{sendCount}}</view>
-          </view>
-        
-         
+        <view class='main-item'>
+          <view class='item-top'>数量（个）</view>
+          <view class='item-bottom'>{{sendCount}}</view>
         </view>
-      </swiper-item>
 
-      <swiper-item>
-        <view bindtap="bindViewTap" class="userinfo">
-          <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-           <text class="userinfo-nickname">{{userInfo.nickName}} 共收到</text> 
+
+      </view>
+    </swiper-item>
+
+    <swiper-item>
+      <view class="userinfo">
+        <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+        <text class="userinfo-nickname">{{userInfo.nickName}} 共收到</text>
+      </view>
+      <view class='main'>
+        <!--2 -->
+        <view class='main-item'>
+          <view class='item-top'>金额（元）</view>
+          <view class='item-bottom'>{{receiveMoney}}</view>
         </view>
-        <view class='main'>
-<!--2 -->
-         <view class='main-item' >
-            <view class='item-top'>金额（元）</view>
-            <view class='item-bottom'>{{receiveMoney}}</view>
-          </view>
-          <view class='main-item' >
-            <view class='item-top'>数量（个）</view>
-            <view class='item-bottom'>{{receiveCount}}</view>
-          </view>
+        <view class='main-item'>
+          <view class='item-top'>数量（个）</view>
+          <view class='item-bottom'>{{receiveCount}}</view>
         </view>
-      </swiper-item>
-    </swiper>
+      </view>
+    </swiper-item>
+  </swiper>
 </view>
