--- a/VoicePassword/app.wxss
+++ b/VoicePassword/app.wxss
@@ -1,14 +1,16 @@
 /**app.wxss**/
+
 .container {
   height: 100%;
   display: flex;
   flex-direction: column;
   /* align-items: center; */
-  justify-content: space-between;
+  /* justify-content: space-between; */
   /* padding: 200rpx 0; */
   box-sizing: border-box;
   width: 100%;
-} 
+}
+
 .userinfo {
   display: flex;
   flex-direction: column;
@@ -20,7 +22,7 @@
   height: 128rpx;
   margin: 20rpx;
   border-radius: 50%;
-  border: 5rpx solid #ddd;
+  border: 10rpx solid #fff;
 }
 
 .userinfo-nickname {
