--- a/VoicePassword/pages/index/index.wxss
+++ b/VoicePassword/pages/index/index.wxss
@@ -1,9 +1,14 @@
 /**index.wxss**/
+.container{
+  background-color: #eee;
+}
 
-
+.userinfo-avatar{
+  margin-bottom: -65rpx;
+}
 
 .voice {
-  padding-top: 50rpx;
+  padding-top: 80rpx;
   width: 100%;
 }
 
@@ -14,6 +19,15 @@
   margin-bottom: 10rpx;
 }
 
+.button-record image{
+  width: 20rpx;
+  height: 28rpx;
+  float: left;
+  position: absolute;
+  left:110rpx;
+  top:18rpx;
+}
+
 .button-play {
   display: inline-block;
   width: 75%;
@@ -22,7 +36,6 @@
   line-height: 70rpx;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-color: gainsboro;
-  /* background-color: #ddd; */
   border-radius: 5px;
 }
 
@@ -43,8 +56,17 @@
   height: 100rpx;
 }
 
-.top-bar {
+.topbar-bg{
   width: 100%;
+  height: 50rpx;
+  text-align: center;
+  background-color: #f00;
+  padding-top: 10rpx;
+  padding-bottom: 10rpx;
+}
+
+.top-bar {
+  width: 70%;
   height: 50rpx;
   display: flex;
   margin: 0 auto;
@@ -52,23 +74,18 @@
   font-family: '微软雅黑' '宋体';
   flex-direction: row;
   align-content: center;
-  padding-left: 15%;
-  padding-right: 15%;
-  padding-top: 10rpx;
-  padding-bottom: 10rpx;
-  background-color: #f00;
   color: white;
 }
 
 .top-bar .navbar-item {
-  width: 14%;
+  width: 20%;
   height: 40rpx;
   text-align: center;
 }
 
 #navbar-item1 {
-  margin-left: 14%;
-  margin-right: 14%;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 .navbar-item-active{
   font-size: 26rpx;
@@ -94,6 +111,7 @@ swiper {
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   box-shadow: 0rpx 0rpx 20rpx 10rpx rgba(0, 0, 0, 0.2);
+  background-color: #fff;
 }
 
 .word-set {
