--- a/VoicePassword/pages/person/person.wxml
+++ b/VoicePassword/pages/person/person.wxml
@@ -1,2 +1,43 @@
 <!--pages/person/person.wxml-->
-<text>pages/person/person.wxml</text>
+<view class='container'>
+
+  <view class='item-top'>
+    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+    <view class='top-center'>
+      <text class="txt-top">{{userInfo.nickName}}</text>
+      <view class='txt-top'>余额
+        <view class='balance'>　{{balance}}　</view> 元
+        <view class='txt2-top' bindtap='bindToPaymentDetail'>　明细></view>
+      </view>
+    </view>
+    <view class='top-right'></view>
+  </view>
+  <view class='line-bord'></view>
+
+  <!-- <view class='item-main' bindtap='bindToRecord'>
+    <image src='../../images/home_s.png'></image>
+    <view class='txt-style1'>我的记录</view>
+    <view class='txt-style2'>发出或者收到的红包记录></view>
+  </view>
+  <view class='line-normal'></view> -->
+  <view class='item-main' bindtap='bindToAudio'>
+    <image src='../../images/home_s.png'></image>
+    <view class='txt-style1'>我的录音</view>
+    <view class='txt-style2'>聆听下自己逗比的声音></view>
+  </view>
+  <view class='line-normal'></view>
+  <view class='item-main' bindtap='bindToProblem'>
+    <image src='../../images/home_s.png'></image>
+    <view class='txt-style1'>常见问题</view>
+    <view class='txt-style2'>了解详情></view>
+  </view>
+  <view class='line-normal'></view>
+  <view class='item-main'>
+    <image src='../../images/home_s.png'></image>
+    <view class='txt-style1'>接收最新红包消息推送</view>
+    <view class='txt-style2'>
+      <switch class='switch-msg'></switch>
+    </view>
+
+  </view>
+</view>
