--- a/VoicePassword/pages/person/person.wxss
+++ b/VoicePassword/pages/person/person.wxss
@@ -1,1 +1,88 @@
 /* pages/person/person.wxss */
+
+page {
+  height: 100%;
+}
+
+.container {
+  background-color: #eee;
+}
+
+.item-top {
+  display: flex;
+  flex-direction: row;
+  height: 168rpx;
+  width: 100%;
+  background-color: #fff;
+}
+
+.top-center {
+  display: flex;
+  flex-direction: column;
+  width: 59.6%;
+  height: 168rpx;
+}
+
+.txt-top {
+  display: flex;
+  flex-direction: row;
+  font-size: 28rpx;
+  color: gray;
+  margin-top: 30rpx;
+}
+
+.balance, .txt2-top {
+  color: #f00;
+}
+
+.top-right {
+  width: 18%;
+  color: #ffbd85;
+  font-size: 32rpx;
+  line-height: 168rpx;
+  text-align: center;
+}
+
+.line-bord {
+  width: 100%;
+  height: 10rpx;
+  background-color: #eee;
+}
+
+.line-normal {
+  width: 100%;
+  height: 3rpx;
+  background-color: #eee;
+}
+
+.item-main {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 90rpx;
+  background-color: #fff;
+}
+
+.item-main image {
+  width: 40rpx;
+  height: 40rpx;
+  margin: 25rpx;
+}
+
+.txt-style1 {
+  font-size: 28rpx;
+  color: #000;
+  line-height: 90rpx;
+  height: 90rpx;
+  width: 44%;
+}
+
+.txt-style2 {
+  width: 44%;
+  font-size: 24rpx;
+  line-height: 90rpx;
+  color: gray;
+  height: 90rpx;
+  text-align: right;
+  padding-right: 10rpx;
+}
