--- a/VoicePassword/pages/record/record.wxss
+++ b/VoicePassword/pages/record/record.wxss
@@ -1,7 +1,14 @@
 /* pages/record/record.wxss */
+.topbar-bg{
+  width: 100%;
+  height: 50rpx;
+  text-align: center;
+  padding-top: 10rpx;
+  padding-bottom: 10rpx;
+}
 
 .top-bar {
-  width: 100%;
+  width: 70%;
   height: 50rpx;
   display: flex;
   margin: 0 auto;
@@ -9,24 +16,14 @@
   font-family: '微软雅黑' '宋体';
   flex-direction: row;
   align-content: center;
-  padding-left: 15%;
-  padding-right: 15%;
-  padding-top: 10rpx;
-  padding-bottom: 10rpx;
-  /* background-color: #f00; */
-  /* color: white; */
 }
 
 .top-bar .navbar-item {
-  width: 35%;
+  width: 50%;
   height: 40rpx;
   text-align: center;
 }
 
-/* #navbar-item1 {
-  margin-left: 14%;
-  margin-right: 14%;
-} */
 .navbar-item-active{
   font-size: 26rpx;
   font-weight: bold;
@@ -49,7 +46,6 @@ swiper {
 .main{
   width: 80%;
   height: auto;
- /* text-align: center */
   display: flex;
   flex-direction: row;
   margin: 0 auto;
