--- a/VoicePassword/pages/index/index.wxss
+++ b/VoicePassword/pages/index/index.wxss
@@ -40,7 +40,7 @@
 }
 
 .button-hover {
-  background-color: 999;
+  background-color: #999;
 }
 
 .result {
@@ -60,7 +60,7 @@
   width: 100%;
   height: 50rpx;
   text-align: center;
-  background-color: #f00;
+  background-color: #E4694A;
   padding-top: 10rpx;
   padding-bottom: 10rpx;
 }
